<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topThirdGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/mathImageMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topThirdGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        app:srcCompat="@drawable/hated_math_1200x627"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/radioGroupLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topThirdGuideline">

        <RadioGroup
            android:id="@+id/difficultyRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SelectDifficulty"
                android:textSize="23sp"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/easyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EasyDifficulty"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/mediumRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MediumDifficulty"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/hardRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HardDifficulty"
                android:textSize="23sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/operationRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SelectOperation"
                android:textSize="23sp"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/additionRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AdditionOperation"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/multiplicationRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MultiplicationOperation"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/divisionRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DivisionOperation"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/subtractionRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SubtractionOperation"
                android:textSize="23sp" />

        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/numberOfQuestionsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/number_of_questions"
        android:textColor="@color/gray"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupLayout"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap" />

    <LinearLayout
        android:id="@+id/incrementButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberOfQuestionsText">

        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/minus"
            android:textColor="@color/gray"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/countTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/questionsCount"
            android:textColor="@color/gray"
            android:textSize="45sp" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/plus"
            android:textColor="@color/gray"
            android:textSize="65sp" />
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/start"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incrementButtonLayout"
        android:textColor="@color/black"
        android:layout_margin="2dp"
        android:backgroundTint="@color/gray" />

</androidx.constraintlayout.widget.ConstraintLayout>